# ServerTechTest

./: .gitignore  README.md
Base64Compat/: pom.xml
Encrypt/Encrypt/: main.cpp
Encrypt/Encrypt.xcodeproj/: project.pbxproj
HttpLibTest/: CMakeLists.txt  bigfile.sh  main.cpp
JnaTest/: pom.xml
KotlinTest/src/: BaseTest.kt  BoxTest.kt  ClassTest.kt  ConditionTest.kt  DTest.kt  DataUserTest.kt  EnumTest.kt  Expression.kt  ExtendsTest.kt  Hello.kt  InnerTest.kt  InterfaceTest.kt  MyTest.kt  MyUITest.kt  OpenDTest.kt  Person2.kt  RunoobTest.kt  SealTest.kt  UiOp.kt  UserTest.kt  WrapperTest.kt
MinioTest/: .gitignore  message.proto  messages.proto  pom.xml
MongooseTest/: CMakeLists.txt  main.cpp
PomTest/: pom.xml  put_test.sh  test.txt
SqliteF5Test/: CMakeLists.txt  main.cpp
SqliteF5Test/cmake/: cdeps.cmake  sqlite.cmake
alipay/paydemo/: pom.xml
android/TestApplication/: arm64.sh
android/TestApplication/app/: build.gradle
android/TestApplication/gradle/: libs.versions.toml
app/: JavaUncaughtExceptionHandler.java  crash.txt
app/DrawerSlideCloseTest/app/: build.gradle.kts
base64/: CMakeLists.txt  base64.c  base64.h  main.c  ngx_base64.c  ngx_base64.h
browser/: auto_clean_163mail.js
docs/: README.md
fast_hex/: CMakeLists.txt  fast_hex.c  fast_hex.h  main.c
fastcoder/FastCoder/: pom.xml
fastcoder/FastMaskCoder/: pom.xml
fastcoder/cplus/: io_output_input.h  pack_unpack_protocol.h
fastcoder/cplus/protocol/: PackerProtocol.java  UnPackerProtocol.java
flutter/learn/: pubspec.yaml
flutter/learn/l10n-arb/: intl_messages.arb  intl_zh_CN.arb
flutter/learn/lib/: backdrop_page.dart  bugfix_nest_scroll_view.dart  discover_inner_normal.dart  discover_inner_normal2.dart  discover_inner_normal3.dart  discover_page.dart  discover_page2.dart  discover_page3.dart  discover_page4.dart  discover_page5.dart  discover_page6.dart  main.dart  my_home_page.dart  one_page.dart  provider_test.dart  want_keep_alive.dart
httparser/: CMakeLists.txt  main.cpp
icutest/icutest/: pom.xml
java/AeronTest/: pom.xml
java/ApiCall/: pom.xml
java/Test/: build.gradle.kts
java/TestJavaWebsocket/: pom.xml
javascript/im/: im.js  package-lock.json  package.json
javascript/socketio/: io-client.js  io-server.js  package-lock.json  package.json
javascript/ws_reply_server/: package-lock.json  package.json  ws_server.js
javascript/ws_server/: ws_server.js
json_test/: build.sh  json_test.cc  message.pb.cc  message.pb.h  wson.c  wson.h.gch
jwt/cplus/asio_speed/: asio_loopback_test  asio_loopback_test.cpp  asio_loopback_test2  asio_loopback_test2.cpp  asio_loopback_test3  asio_loopback_test3.cpp  asio_loopback_test4  asio_loopback_test4.cpp  asio_loopback_test5  asio_loopback_test5.cpp  asio_speed.md  beast_test  beast_test.cpp  beast_test2.cpp  post_speed  post_speed.cpp  post_speed2  post_speed2.cpp  websocket_async_client.cpp
jwt/cplus/hwinfo/: CMakeLists.txt  main.cpp
jwt/cplus/hwinfo/hwinfo/: CMakeLists.txt
jwt/cplus/io/ProtobufTest/: CMakeLists.txt  main.cpp  message.sh  protocol_message.pb.cc  protocol_message.pb.h  protocol_message.proto
jwt/cplus/io/ProtobufTest/java/com/wsg/protocol/protobuf/: Message.java  ProtocolMessage.java
jwt/cplus/io/Protocol/: CMakeLists.txt  big_heap_string_view_pool.h  io_output_input.h  main.cpp  pack_unpack_protocol.h  string_view_in_big_heap_pool.cc  string_view_in_big_heap_pool.h  string_view_in_block.h
jwt/cplus/io/Protocol/lib/Turbo-Base64-master/: CMakeLists.txt  turbob64.h  turbob64_.h
jwt/cplus/libuv-vs-eventbase/: folly_echo_server.cpp  libuv_echo_server.c
jwt/cplus/libuv_speed/: client  client.c  libuv.md  server  server.c
jwt/cplus/udptest/: CMakeLists.txt  main.cpp  udp_client.cpp  udp_client.h  udp_server.cpp  udp_server.h
jwt/jwtTest2/: pom.xml
mqtt/mqtt/: pom.xml
netty/nettyTest/: build.gradle.kts  settings.gradle.kts  ws_bench.js  ws_bench.sh  ws_bench2.js
openssldemo/tlsdemo/: CMakeLists.txt  main.cpp
rust/ws/hello-ws/: Cargo.toml
uriparse/: CMakeLists.txt  main.c  url_encode.c  url_encode.h  urlparse.c
url_encoder/: CMakeLists.txt  main.c  url_encode.c  url_encode.h
websocket/: EchoServer2.cpp  EchoServer3.cpp  fwss.md
wss/: login.html
wss/ImproveWs/ImproveWs/: main.cpp
wss/ImproveWs/ImproveWs.xcodeproj/: project.pbxproj
wss/cplus/cplus/: base64_compare_test.cc  base64_usage_test.cc  ecrypt_test.cc  json_test.cc  main.cpp  map_find_test.cc  map_find_test_int.cc  share_ptr_test.cc  string_memory_test.cc  uuid_compare_test.cc  uuid_int128_map_test.cc
wss/cplus/cplus.xcodeproj/: project.pbxproj
wss/example/: MessageBenchBinary.cpp  MessageBenchBinaryWs.cpp  MessageBenchMultiRole.cpp  MessageBenchMultiServer.cpp  MessageBenchMultiServer2.cpp  MessageBenchReceive.cpp  MessageBenchReply.cpp  MessageBenchReply2.cpp  MessageBenchReply3.cpp  MessageBenchReply4.cpp  MessageBenchReply5.cpp  MessageBenchReply6.cpp  MessageBenchReplyPlain.cpp
wss/follyd/follyd/: circular_buffer_test.cc  event_bus_json2_test.cc  event_bus_json_test.cc  event_bus_json_zstd_multi_thread_test.cc  event_bus_json_zstd_test.cc  event_bus_route_test.cc  event_bus_test.cc  folly_circular_buffer_string_test.cc  folly_circular_buffer_test.cc  folly_executor_test_main.cc  json_test.cc  main.cpp  tbb_test.cc  zero_mq_inner_ipc.cc  zero_mq_test.cc
wss/follyd/follyd.xcodeproj/: project.pbxproj
wss/redispubsub/RedisPubSubTest/: pom.xml
wss/tasktest/: BatchPostMessage.h  CMakeLists.txt  FastSwapQueue.h  main.cpp
wss/tasktest/demo/: main2.cpp
wss/tasktest/lib/concurrentqueue-master/: CMakeLists.txt
wss/tasktest/lib/libuv-1.51.0/src/: threadpool.c
wss/test/: pom.xml
wss/websocketpp/websocketpp/: main.cpp  websocket_pp_no_tts_test.cc  websocket_pp_tts_multi_client_test.cc  websocket_pp_tts_test.cc
wss/websocketpp3/websocketpp/: BatchPost.hpp  batch_queue_test.cc  main.cpp  websocket_pp_frame_test.cc  websocket_pp_no_tts_test.cc  websocket_pp_tts_multi_client_test.cc  websocket_pp_tts_test.cc
wss/websocketpp3/websocketpp.xcodeproj/: project.pbxproj
wss/websocketppserver/websocketpp/: main.cpp  (+6 more)
(+441 files in other folders)
